fix(ui5-button): remove tap highlight on safari

--- a/packages/main/src/themes/Button.css
+++ b/packages/main/src/themes/Button.css
@@ -21,6 +21,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	-webkit-tap-highlight-color: transparent;
 }
 
 .ui5-button-root {
